# hermes-qrt-manager-

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
deploy/railway/: README.md
deploy/supabase/: README.md
hermes-manager-krt-bot-ready-final/: README.md
hermes-manager-krt-bot-ready-final/scripts/: check_config.py
hermes-manager-krt-bot-ready-final/src/clan_manager_bot/: db.py  hermes_client.py  moderation.py
hermes-manager-krt-bot-ready-final/tests/: test_handlers.py  test_import_telegram_export.py  test_moderation.py
scripts/: import_telegram_export.py
sql/: schema.sql
src/clan_manager_bot/: __init__.py  analytics.py  config.py  db.py  handlers.py  hermes_client.py  main.py  models.py  scoring.py
tests/: test_config.py  test_handlers.py  test_hermes_client.py  test_scoring.py
